feat: workItem search
